--- a/.github/workflows/github-build.yml
+++ b/.github/workflows/github-build.yml
@@ -1,25 +1,41 @@
-name: Java CI
+name: Build
 
-on: [push]
+on:
+  push:
+    branches:
+      - 'master'
+  pull_request:
 
 jobs:
   build:
+    name: Build & Test
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v2
+      - name: Clone repository
+        uses: actions/checkout@v3
         with:
-          java-version: '8'
+          fetch-depth: 0
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
           distribution: 'temurin'
       - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+        uses: gradle/wrapper-validation-action@v1
+      - name : Retrieve module version from Reckon
+        run: echo "VERSION_NAME=$(${{github.workspace}}/gradlew -q clfPrintVersion)" >> $GITHUB_OUTPUT
+        id: retrieve_version
+      - name: Publish module version to Github Step Summary
+        run: |
+          echo "# ${{steps.retrieve_version.outputs.VERSION_NAME}}" >> $GITHUB_STEP_SUMMARY
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
+        uses: gradle/gradle-build-action@v2
         with:
           arguments: build
-      - name: Upload coverage reports
-        uses: codecov/codecov-action@v2
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v3
+        if: always() # always run even if the previous step fails
         with:
-          files: build/reports/kover/report.xml
+          report_paths: '**/build/test-results/test/TEST-*.xml'
+          include_passed: true
